[package]
name = "dasp-rs"
version = "0.1.1"
edition = "2024"
description = "A crate for digital signal processing, speech processing, music analysis, and phonetics."
authors = ["Amirhossein Ghanipour amirhosseinghanipour@gmail.com"]
license = "CC-BY-NC-4.0"
keywords = ["dasp", "dsp", "digital audio signal processing", "speech processing", "music analysis", "speech signal processing", "audio processing"]

[dependencies]
hound = "3.5.1"
rustfft = "6.2.0"
num-complex = "0.4.6"
thiserror = "1.0"
rubato = "0.16.1"
ndarray = { version = "0.16.1", features = ["rayon"] }
approx = "0.5.1"
rayon = "1.10.0"
ndarray-linalg = { version = "0.17.0", features = ["openblas", "openblas-system", "openblas-static"] }